hphp/hack/test/typecheck/expression_trees/generic_visitor.php.exp
File "generic_visitor.php", line 7, characters 12-12:
A semicolon `;` is expected here. (Parsing[1002])
File "generic_visitor.php", line 7, characters 3-6:
Unbound name: `Code` (a global function) (Naming[2049])
File "generic_visitor.php", line 7, characters 12-12:
Unbound name: ``` (a global constant) (Naming[2049])
File "generic_visitor.php", line 7, characters 12-12:
Unbound global constant (Typing) (Typing[4106])
File "generic_visitor.php", line 7, characters 3-6:
Unbound name (typing): `Code` (Typing[4107])
