hphp/hack/test/typecheck/expression_trees/generic_visitor.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(): void {
  // This syntax isn't legal
  ExampleDsl<int>`1`;
}
